remove reference to legacy guests

--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -138,7 +138,7 @@ brew install --HEAD appwrite</code></pre>
     "collections": [
         {
             "$id": "6213bb2d567d8a206614",
-            [
+            "$permissions": [
                 "read(any)",
                 "create(team:core)",
                 "update(team:core)",
