--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -119,7 +119,7 @@ let subscription = realtime.subscribe(channels: ["files"]) { message in
 <div class="notice margin-top-large margin-bottom-large">
     <h3>Permissions</h3>
     <p>All subscriptions are secured by the <a href="/docs/permissions">permissions system</a> offered by Appwrite, meaning a user will only receive updates to resources to which he has permission to read.</p>
-    <p>Using <span class="tag">role:all</span> on read permissions will allow any client to receive updates.</p>
+    <p>Using <span class="tag">read(all)</span> on read permissions will allow any client to receive updates.</p>
 </div>
 
 <h2><a href="/docs/realtime#examples" id="examples">Examples</a></h2>
