Fix grammar in permissions.phtml

--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -24,7 +24,7 @@
     <h4>Note</h4>
     
     <p>You will need an active session to perform database transactions for your collections.</p>
-    <p>If you have rules where you allow for all users or guests in a collection, you can create an Anonymous Session before you make the API call.</p>
+    <p>If you have rules where you grant access for all users or guests in a collection, you can create an Anonymous Session before you make the API call.</p>
 </div>
 
 <h2 id="server-integration"><a href="/docs/permissions#server-integration">Server Integration</a></h2>
