updated pagination documentation

--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -343,22 +343,20 @@ func main() async throws{
         </tr>
         <tr>
             <td>limit</td>
-            <td>Limits the number of results returned by the query. Used for pagination.</td>
+            <td>Limits the number of results returned by the query. Used for <a href="/docs/pagination#offset-pagination" id="offset-pagination">pagination</a>.</td>
         </tr>
         <tr>
             <td>offset</td>
-            <td>Offset the results returned by skipping some of the results. Used for pagination.</td>
+            <td>Offset the results returned by skipping some of the results. Used for <a href="/docs/pagination#offset-pagination" id="offset-pagination">pagination</a>.</td>
         </tr>
         <tr>
             <td>cursorAfter</td>
-            <td>Places the cursor after the specified item ID. Used for pagination.</td>
+            <td>Places the cursor after the specified item ID. Used for <a href="/docs/pagination#cursor-pagination" id="cursor-pagination">pagination</a>.</td>
         </tr>
         <tr>
             <td>cursorBefore</td>
-            <td>Places the cursor before the specified item ID. Used for pagination.</td>
+            <td>Places the cursor before the specified item ID. Used for <a href="/docs/pagination#cursor-pagination" id="cursor-pagination">pagination</a>.</td>
         </tr>
-        
-        orderDesc(string $attribute): self
     </tbody>
 </table>
 
