update timestamp in example payload

--- a/app/views/docs/realtime.phtml
+++ b/app/views/docs/realtime.phtml
@@ -366,7 +366,7 @@ subscription.close()</code></pre>
                 integer
             </td>
             <td data-title="Description: ">
-                The <a href="https://en.wikipedia.org/wiki/Unix_time" rel="noopener" target="_blank">UNIX timestamp</a> from the server to ensure consistency across all client platforms and real-time technologies.
+                The <a href="https://en.wikipedia.org/wiki/ISO_8601" rel="noopener" target="_blank">Datetime</a> in UTC timezone from the server to ensure consistency across all client platforms and real-time technologies.
             </td>
         </tr>
         <tr>
