--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -86,7 +86,7 @@
     </tr>
     <tr>
         <td>Permission.create()</td>
-        <td>Access to create new resources. Only applies to collections, applying this type of access results in an error. Does not apply to functions.</td>
+        <td>Access to create new resources. Only applies to collections and buckets, applying this type of access to other resources results in an error. Does not apply to functions.</td>
     </tr>
     <tr>
         <td>Permission.update()</td>
