--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -146,7 +146,7 @@ promise.then(function (response) {
 
 <h3 id="example-2"><a href="/docs/permissions#example-2">Example #2 - Team Roles</a></h3>
 
-<p>In the following example, we are creating a document that can be read-only by members of <span class="tag">team:5c1f88b87435e</span> and can only be edited, or deleted by members of the same team that possesses the team role <span class="tag">owner</span>.</p>
+<p>In the following example, we are creating a document that can be read-only by members of team with ID <span class="tag">5c1f88b87435e</span> and can only be edited, or deleted by members of the same team that possesses the team role <span class="tag">owner</span>.</p>
 
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
     <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Databases, Permission, Role } from "appwrite";
