--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -23,8 +23,7 @@
 <div class="notice calm margin-top-large margin-bottom-large">
     <h4>Note</h4>
     
-    <p>You will need an active session to perform database transactions for your collections.</p>
-    <p>If you have rules where you grant access for all users or guests in a collection, you can create an Anonymous Session before you make the API call.</p>
+    <p>You will need an active session to perform create, update, and delete type actions in your collections. If you have rules where you grant create, update, or delete access to all users or guests in a collection, create an Anonymous Session before you make the API call.</p>
 </div>
 
 <h2 id="server-integration"><a href="/docs/permissions#server-integration">Server Integration</a></h2>
@@ -49,15 +48,15 @@
     </tr>
     <tr>
         <td>Role.guests()</td>
-        <td>Grants access to any guest user with an anonymous session. Logged in users don't have access to this role.</td>
+        <td>Grants access to any guest user without a session. Logged in users don't have access to this role.</td>
     </tr>
     <tr>
         <td>Role.users()</td>
-        <td>Grants access to any authenticated user.</td>
+        <td>Grants access to any authenticated or anonymous user.</td>
     </tr>
     <tr>
         <td>Role.user([USER_ID])</td>
-        <td>Grants access to a specific user by UID.</td>
+        <td>Grants access to a specific user by user ID.</td>
     </tr>
     <tr>
         <td>Role.team([TEAM_ID])</td>
@@ -90,7 +89,7 @@
     </tr>
     <tr>
         <td>Permission.update()</td>
-        <td>Access to alter a resource, but not remove or create new resources. Does not apply to functions.</td>
+        <td>Access to change a resource, but not remove or create new resources. Does not apply to functions.</td>
     </tr>
     <tr>
         <td>Permission.delete()</td>
@@ -98,7 +97,7 @@
     </tr>
     <tr>
         <td>Permission.execute()</td>
-        <td>Access to execute an Appwrite Function.</td>
+        <td>Access to execute an Appwrite Function. Does not apply to any resources other than functions.</td>
     </tr>
     </tbody>
 </table>
@@ -111,7 +110,7 @@
 
 <h3 id="example-1"><a href="/docs/permissions#example-1">Example #1 - Basic Usage</a></h3>
 
-<p>In the following example, we are creating a document can be viewed by anyone, edited by writers or admins, and deleted by a user with UID <span class="tag">user:5c1f88b42259e</span> or administrators.</p>
+<p>In the following example, we are creating a document that can be viewed by anyone, edited by writers or admins, and deleted by a user with the user ID <span class="tag">user:5c1f88b42259e</span> or administrators.</p>
 
 <div class="ide" data-lang="javascript" data-lang-label="Web SDK">
     <pre class="line-numbers"><code class="prism language-javascript" data-prism>import { Client, Databases, Permission, Role } from "appwrite";
@@ -130,8 +129,7 @@ let promise = databases.createDocument(
     [ // Permissions
         Permission.read(Role.any()), // Anyone can view this document
         Permission.edit([Role.team("writers"), Role.team("admin")]), // Only writers and admins can edit this document
-        Permission.delete(Role.user("5c1f88b42259e")) 
-        Permission.delete(Role.user("5c1f88b42259e")) // Only user 5c1f88b42259e and admins can delete this document
+        Permission.delete([Role.user("5c1f88b42259e"), Role.team("admin")]) // Only user 5c1f88b42259e and admins can delete this document
     ]
 );
 
@@ -163,10 +161,10 @@ let promise = databases.createDocument(
     '[COLLECTION_ID]',
     {'actorName': 'Chris Evans', 'height': 183},
     [
-        Permission.read(Role.team("5c1f88b87435e"))
-        Permission.edit(Role.team("5c1f88b87435e", "owner")),
-        Permission.delete(Role.team("5c1f88b87435e", "owner"),
-    ], // The user must be a team member to grant these permissions
+        Permission.read(Role.team("5c1f88b87435e")), // Only users of team 5c1f88b87435e can read the document
+        Permission.edit(Role.team("5c1f88b87435e", "owner")), // Only users of team 5c1f88b87435e with the role owner can edit the document
+        Permission.delete(Role.team("5c1f88b87435e", "owner") // Only users of team 5c1f88b87435e with the role owner can delete the document
+    ]
 );
 
 promise.then(function (response) {
