Add 202 response code

--- a/app/views/docs/response-codes.phtml
+++ b/app/views/docs/response-codes.phtml
@@ -26,6 +26,12 @@ $errorTypes = $this->getParam('errors', []);
         </tr>
 
         <tr>
+            <td data-title="Code: ">202</td>
+            <td data-title="Text: ">Accepted</td>
+            <td data-title="Description: ">The requested change has been accepted for processing but has not been completed.</td>
+        </tr>
+
+        <tr>
             <td data-title="Code: ">204</td>
             <td data-title="Text: ">No Content</td>
             <td data-title="Description: ">The server has successfully fulfilled the request and that there is no additional content to send in the response payload body. This status will usually return on successful delete operations.</td>
