--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -139,10 +139,10 @@ brew install --HEAD appwrite</code></pre>
         {
             "$id": "6213bb2d567d8a206614",
             "$permissions": [
-                "read(any)",
-                "create(team:core)",
-                "update(team:core)",
-                "delete(team:core)",
+                "read(\"any\")",
+                "create(\"team:core\")",
+                "update(\"team:core\")",
+                "delete(\"team:core\")",
             ],
             "name": "Millenium Problems",
             "enabled": true,
