corrects spelling of required

--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -454,7 +454,7 @@ func main() async throws {
     </li>
 </ul>
 
-<p>When performing a query against multiple attributes, a single index with all queries attributes is required. In the example above, a single index with <b>both</b> <span class="tag">title</span> and <span class="tag">year</span> is queried.</p>
+<p>When performing a query against multiple attributes, a single index with all queries attributes is required. In the example above, a single index with <b>both</b> <span class="tag">title</span> and <span class="tag">year</span> is required.</p>
 
 <h2><a href="/docs/databases#indexes" id="indexes">Indexes</a></h2>
 <p>
