--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -146,7 +146,7 @@ brew install --HEAD appwrite</code></pre>
             ],
             "name": "Millenium Problems",
             "enabled": true,
-            "documentSecurity": "true",
+            "documentSecurity": true,
             "attributes": [],
             "indexes": []
         }
