--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -41,7 +41,7 @@
     <p>For security purposes, an active Account session is required to create resources. So, even if wildcard write permissions are set, only logged-in users can create documents in a collection. If you require this behavior for your app, create an <a href="/docs/client/account?sdk=web-default#accountCreateAnonymousSession">anonymous session</a> first. An active session helps Appwrite enforce rate-control limits and protect your projects from intensive write operations.</p>
 </div>
 <h4>Document Level Permissions</h4>
-<p>Document level permissions grant access to individual documents. Document level permissions are only enabled if Document Security is enabled in the settings of your collection.</p>
+<p>Document level permissions grant access to individual documents. Document level permissions are only applied if Document Security is enabled in the settings of your collection.</p>
 
 <h4>Collection Level Permissions</h4>
 <p>Collection level permissions apply to every document in the collection.</p>
